2nd slider error correction

--- a/index.html
+++ b/index.html
@@ -846,7 +846,6 @@
           <div class="rating">
             <span>4.1</span>
             <div class="stars">
-              <!-- Using the SVG star from your previous request, repeated 4 times for 4.1 rating -->
               <i class="fa-solid fa-star star"></i>
               <i class="fa-solid fa-star star"></i>
               <i class="fa-solid fa-star star"></i>
@@ -867,6 +866,44 @@
 
         <div class="carousel-track-container">
           <ul class="carousel-track">
+            <li class="carousel-slide-review">
+              <div class="review-card">
+                <div class="review-header">
+                  <div class="reviewer-name">Mridula Shukla Thakur</div>
+                  <div class="review-stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                  <div class="review-date">6 months ago</div>
+                </div>
+                <div class="review-text">
+                  Looks good. Just received. Will see the results then come back
+                  for final review.
+                </div>
+              </div>
+            </li>
+
+            <li class="carousel-slide-review">
+              <div class="review-card">
+                <div class="review-header">
+                  <div class="reviewer-name">Mridula Shukla Thakur</div>
+                  <div class="review-stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                  <div class="review-date">6 months ago</div>
+                </div>
+                <div class="review-text">
+                  Looks good. Just received. Will see the results then come back
+                  for final review.
+                </div>
+              </div>
+            </li>
+
             <li class="carousel-slide-review">
               <div class="review-card">
                 <div class="review-header">
